Modify JSON format